Add more info to upcoming attacks menu